--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,10 @@
     "require": {
         "php": "^7.2",
         "fideloper/proxy": "^4.0",
+        "intervention/image": "^2.5",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
+        "unisharp/laravel-filemanager": "^1.9",
         "yajra/laravel-datatables-oracle": "^9.8"
     },
     "require-dev": {
